--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 config.security.oauth.client.id=microservices
 config.security.oauth.client.secret=1234
-config.security.oauth.jwt.key=1234
+config.security.oauth.jwt.key=AVP_SISTEMAS1!_2020
